# drone-killer

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  convert_model.py  demo.cpp  demo.py  image-comp-installer.sh
audio/: README.md  drone_detect.py  micsim.py
dashboard/backend/: Dockerfile  package.json  server.js
dashboard/deployment-drones/: README.md  docker-compose.yml
dashboard/frontend/: Dockerfile  README.md  angular.json  package.json
dashboard/frontend/src/: index.html  styles.scss
dashboard/frontend/src/app/: app.html  app.scss  app.spec.ts  app.ts  events-drawer.component.html  events-drawer.component.scss  events-drawer.component.ts  events.service.ts
model/: model.ckpt.index  object-detection.pbtxt
